content/styles/shared_override.scss
h2.noBefore:before {
  content: '';
}


@media print {
  #federation img {
    width: 50%
  }

  #traqula-bench img , #traqula-bench img {
    width: 80%;
  }

  .screenonly {
    display: none !important;
  }
}

#parsers .reqCheck {
  text-wrap: nowrap !important;
}

#parsers {
  .n::before {
    content: '·';
    text-wrap: nowrap !important;
    //color: red !important;
  }
  .s::before {
    content: '⭘';
    text-wrap: nowrap !important;
    color: orange !important;
  }
  .y::before {
    content: '✔';
    text-wrap: nowrap !important;
    color: green !important;
  }
}

code {
  padding: 0 !important;
  overflow-y: clip;
}

